--- a/src/app/views/error/500.component.html
+++ b/src/app/views/error/500.component.html
@@ -1,22 +1,19 @@
-<div class="app flex-row align-items-center">
-  <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-md-6">
-        <div class="clearfix">
-          <h1 class="float-left display-3 mr-4">500</h1>
-          <h4 class="pt-3">Houston, we have a problem!</h4>
-          <p class="text-muted">The page you are looking for is temporarily unavailable.</p>
-        </div>
-        <div class="input-prepend input-group">
-          <div class="input-group-prepend">
-            <span class="input-group-text"><i class="fa fa-search"></i></span>
-          </div>
-          <input id="prependedInput" class="form-control" size="16" type="text" placeholder="What are you looking for?">
-          <span class="input-group-append">
-            <button class="btn btn-info" type="button">Search</button>
-          </span>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+<button id="cmd" class="pdf-download" onclick="generate(true)">Make PDF</button>
+<table id="geo_summarynew">
+  <thead><tr class="hidden1"><th data-style="Header" style="background-color: #66cdf2; color: #000">Opportunity</th><th data-style="Header" style="background-color: #66cdf2; color: #000">Pipeline Count</th><th data-style="Header" style="background-color: #66cdf2; color: #000">Pipeline Value</th></tr>
+
+  </thead>
+  <tbody><tr><td>Qualified</td><td>29</td><td>8156520</td></tr><tr><td>Proposal Submitted</td><td>50</td><td>22949308</td></tr></tbody>
+</table>
+<table id="group2new">
+  <thead><tr class="hidden1"><th data-style="Header" style="background-color: #66cdf2; color: #000">Opportunity</th><th data-style="Header" style="background-color: #66cdf2; color: #000">Pipeline Count</th><th data-style="Header" style="background-color: #66cdf2; color: #000">Pipeline Value</th></tr><tr></tr>
+
+  </thead>
+  <tbody><tr><td>Closed Won</td><td>65</td><td>15712559</td></tr></tbody>
+</table>
+<table id="group3new">
+  <thead><tr class="hidden1"><th data-style="Header" style="background-color: #66cdf2; color: #000">Opportunity</th><th data-style="Header" style="background-color: #66cdf2; color: #000">Pipeline Count</th></tr><tr></tr>
+
+  </thead>
+  <tbody><tr><td>Closed Lost</td><td>156</td></tr></tbody>
+</table>
