--- a/src/app/views/theme/colors.component.html
+++ b/src/app/views/theme/colors.component.html
@@ -1,113 +1,117 @@
 
-  <div class="card">
-    <div class="card-header">
-      <strong> Récherchez les statistiques pluviometriques d'une region en fonction de l'année.</strong>
-    </div>
-    <div>
-
-    <div class="card-body" >
-      <div class="btn-group" dropdown>
-      <label for="cars">Région:&nbsp; &nbsp; </label>
-          <select name="cars" id="cars"  [(ngModel)]="p_select">
-            <option value="Marahoué">Marahoué</option>
-            <option value="N’Zi">N’Zi</option>
-            <option value="Iffou">Iffou</option>
-            <option value="Mé">Mé</option>
-            <option value="Bélier">Bélier</option>
-            <option value="Guémon">Guémon</option>
-            <option value="Moronou">Moronou</option>
-            <option value="Indénié-Djuablin">Indénié-Djuablin</option>
-            <option value="Sud-Comoé">Sud-Comoé</option>
-            <option value="Folon">Folon</option>
-            <option value="Kabadougou">Kabadougou</option>
-            <option value="Gôh">Gôh</option>
-            <option value="Lôh-Djiboua">Lôh-Djiboua</option>
-            <option value="Agnéby-Tiassa">Agnéby-Tiassa</option>
-            <option value="Grands Ponts">Grands Ponts</option>
-            <option value="Tonkpi">Tonkpi</option>
-            <option value="Mé">Mé</option>
-          </select>
-
-      </div>
-
-
-      <div class="btn-group" dropdown>
-        <label for="cars">&nbsp; &nbsp; &nbsp; Année:&nbsp;&nbsp;  </label>
-        <select name="cars" id="car" [(ngModel)]="p1_select">
-          <option value="2000">2000</option>
-          <option value="2001">2001</option>
-          <option value="2002">2002</option>
-          <option value="2003">2003</option>
-          <option value="2004">2004</option>
-          <option value="2005">2005</option>
-          <option value="2006" >2006</option>
-          <option value="2007">2007</option>
-          <option value="2008">2008</option>
-          <option value="2009">2009</option>
-          <option value="2014">2014</option>
-        </select>
-      </div>
+  <div class="container" >
+     <div class="card" >
+         <div class="card-header">
+          <strong> Récherchez les statistiques pluviometriques d'une region en fonction de l'année.</strong>
+          </div>
+       <div>
+         <div class="card-body">
+            <div class="btn-group" dropdown>
+              <label for="cars">Région:&nbsp; &nbsp; </label>
+                 <select name="cars" id="cars"  [(ngModel)]="p_select">
+                      <option value="Marahoué">Marahoué</option>
+                      <option value="N’Zi">N’Zi</option>
+                      <option value="Iffou">Iffou</option>
+                      <option value="Mé">Mé</option>
+                      <option value="Bélier">Bélier</option>
+                      <option value="Guémon">Guémon</option>
+                      <option value="Moronou">Moronou</option>
+                      <option value="Indénié-Djuablin">Indénié-Djuablin</option>
+                      <option value="Sud-Comoé">Sud-Comoé</option>
+                      <option value="Folon">Folon</option>
+                      <option value="Kabadougou">Kabadougou</option>
+                      <option value="Gôh">Gôh</option>
+                      <option value="Lôh-Djiboua">Lôh-Djiboua</option>
+                      <option value="Agnéby-Tiassa">Agnéby-Tiassa</option>
+                      <option value="Grands Ponts">Grands Ponts</option>
+                      <option value="Tonkpi">Tonkpi</option>
+                   <option value="Mé">Mé</option>
+                 </select>
+          </div>
 
 
+              <div class="btn-group" dropdown>
+                <label for="cars">&nbsp; &nbsp; &nbsp; Année:&nbsp;&nbsp;  </label>
+                 <select name="cars" id="car" [(ngModel)]="p1_select">
+                    <option value="2000">2000</option>
+                    <option value="2001">2001</option>
+                    <option value="2002">2002</option>
+                    <option value="2003">2003</option>
+                    <option value="2004">2004</option>
+                      <option value="2005">2005</option>
+                      <option value="2006" >2006</option>
+                    <option value="2007">2007</option>
+                   <option value="2008">2008</option>
+                     <option value="2009">2009</option>
+                     <option value="2014">2014</option>
+                 </select>
+              </div>
 
-      <div class="btn-group" dropdown>&nbsp; &nbsp; &nbsp;
-        <div class="col-6 col-sm-4 col-md-2 col-xl mb-3 mb-xl-0">
-          <button type="button" (click)="onGetPluivio()" class="btn btn-block btn-secondary">Récherchez</button>
-        </div>
-      </div>
-    </div>
-  </div>
-  </div>
+                   <div class="btn-group" dropdown>&nbsp; &nbsp; &nbsp;
+                     <div class="col-6 col-sm-4 col-md-2 col-xl mb-3 mb-xl-0">
+                     <button type="button" (click)="onGetPluivio()" class="btn btn-block btn-secondary">Récherchez</button>
+                      </div>
+                   </div>
+       </div>
 
+     </div>
 
-  <div class="card" *ngIf="div1">
-    <div class="card-header">
-      REGION:  <strong>{{p_select}}</strong><br/>
-      Pluviometrie de l'année <strong>{{p1_select}}</strong>
-    </div>
-    <div class="card-body">
-      <table *ngIf="pluies" class="table table-bordered">
-        <thead align="center">
-        <tr align="center">
-          <th>ANNEE</th>
-          <th  width="40%" align="center">LOCALITES</th>
-          <th >HAUTEUR ANNUELLE DE PLUIE (MM)</th>
-          <th>NOMBRE DE JOURS DE PLUIE/AN</th>
-
-        </tr>
-        </thead>
-        <tbody align="center">
-        <tr *ngFor="let p of pluies.data">
-          <td>{{p.annee.libelle}} </td>
-          <td class="i1">{{p.localite.libelle}}</td>
-          <td>{{p.hauteurPluieAnnuelle}}</td>
-          <td>{{p.nbJourPluie}}</td>
-
-        </tr>
-
-        </tbody>
-      </table>
-
-      <p align="right">Source: SODEXAM</p>
     </div>
 
-  </div>
+    <div id="contentToConvert" #contentToConvert>
+          <div class="card" *ngIf="div1" >
+               <div class="card-header">
+                 REGION:  <strong>{{p_select}}</strong><br/>
+                    Pluviometrie de l'année <strong>{{p1_select}}</strong>
+               </div>
+            <div class="card-body">
+                <table id="tabl" *ngIf="pluies" class="table table-bordered">
+                   <thead align="center">
+                        <tr align="center">
+                           <th>ANNEE</th>
+                          <th  width="40%" align="center">LOCALITES</th>
+                          <th >HAUTEUR ANNUELLE DE PLUIE (MM)</th>
+                          <th>NOMBRE DE JOURS DE PLUIE/AN</th>
+                        </tr>
+                   </thead>
+                     <tbody align="center">
+                       <tr *ngFor="let p of pluies.data">
+                         <td>{{p.annee.libelle}} </td>
+                         <td class="i1">{{p.localite.libelle}}</td>
+                         <td>{{p.hauteurPluieAnnuelle}}</td>
+                         <td>{{p.nbJourPluie}}</td>
+                       </tr>
+                     </tbody>
+                </table>
 
+                     <p align="right">Source: SODEXAM</p>
+            </div>
+          </div>
 
-  <div class="card" *ngIf="div1">
-    <div class="card-header">
-     Statistiques pluiviometriques de l'année {{p1_select}} pour chaque localite de la region {{p_select}}
-    </div>
-    <div class="card-body">
-      <div class="chart-wrapper"*ngIf="pluies">
-        <canvas baseChart class="chart"
-                [datasets]="barChartData"
-                [labels]="barChartLabels"
-                [options]="barChartOptions"
-                [legend]="barChartLegend"
-                [chartType]="barChartType"
-                (chartHover)="chartHovered($event)"
-                (chartClick)="chartClicked($event)"></canvas>
-      </div>
+     <div id="graph" class="card" *ngIf="div1" >
+        <div class="card-header">
+         Statistiques pluiviometriques de l'année {{p1_select}} pour chaque localite de la region {{p_select}}
+         </div>
+         <div class="card-body">
+            <div class="chart-wrapper"*ngIf="pluies">
+                  <canvas id="cann" baseChart class="chart"
+                        [datasets]="barChartData"
+                    [labels]="barChartLabels"
+                    [options]="barChartOptions"
+                     [legend]="barChartLegend"
+                       [chartType]="barChartType"
+                        (chartHover)="chartHovered($event)"
+                      (chartClick)="chartClicked($event)">
+                  </canvas>
+           </div>
+         </div>
+     </div>
     </div>
   </div>
+
+     <div class="ctr"  *ngIf="div1">
+      &nbsp;&nbsp;<button type="button" class="btn btn-primary " (click)="createPdf()">
+           <i class="icon-cloud-download">  Telecharger PDF</i></button>
+       <br/><br/>
+     </div>
+
