--- a/src/app/views/error/500.component.html
+++ b/src/app/views/error/500.component.html
@@ -1,19 +1,62 @@
-<button id="cmd" class="pdf-download" onclick="generate(true)">Make PDF</button>
-<table id="geo_summarynew">
-  <thead><tr class="hidden1"><th data-style="Header" style="background-color: #66cdf2; color: #000">Opportunity</th><th data-style="Header" style="background-color: #66cdf2; color: #000">Pipeline Count</th><th data-style="Header" style="background-color: #66cdf2; color: #000">Pipeline Value</th></tr>
+<div class=" col-12">
+  <div class=" card card-chart">
+    <div class=" card-header">
+      <div class=" row">
+        <div class=" col-sm-6 text-left">
+          <h5 class=" card-category">Statistiques agricoles</h5>
+          <h2 class=" card-title">Cacao</h2>
+        </div>
+        <div class=" col-sm-6">
+          <div
+            class=" btn-group btn-group-toggle float-right"
+            data-toggle="buttons"
+          >
+            <label class=" btn btn-sm btn-danger btn-simple" (click)="data=datasets[0];updateOptions();clicked=true;clicked1=false;clicked2=false" [ngClass]="{'active':clicked===true}">
+              <input checked="checked" name="options" type="radio" />
 
-  </thead>
-  <tbody><tr><td>Qualified</td><td>29</td><td>8156520</td></tr><tr><td>Proposal Submitted</td><td>50</td><td>22949308</td></tr></tbody>
-</table>
-<table id="group2new">
-  <thead><tr class="hidden1"><th data-style="Header" style="background-color: #66cdf2; color: #000">Opportunity</th><th data-style="Header" style="background-color: #66cdf2; color: #000">Pipeline Count</th><th data-style="Header" style="background-color: #66cdf2; color: #000">Pipeline Value</th></tr><tr></tr>
+              <span
+                class=" d-none d-sm-block d-md-block d-lg-block d-xl-block"
+              >
+                   Superficie
+                  </span>
+              <span class=" d-block d-sm-none">
+                    <i class=" tim-icons icon-single-02"> </i>
+                  </span>
+            </label>
+            <label class=" btn btn-sm btn-danger btn-simple" (click)="data=datasets[1];updateOptions();clicked=false;clicked1=true;clicked2=false" [ngClass]="{'active':clicked1===true}">
+              <input
+                class=" d-none d-sm-none"
+                name="options"
+                type="radio"
+              />
 
-  </thead>
-  <tbody><tr><td>Closed Won</td><td>65</td><td>15712559</td></tr></tbody>
-</table>
-<table id="group3new">
-  <thead><tr class="hidden1"><th data-style="Header" style="background-color: #66cdf2; color: #000">Opportunity</th><th data-style="Header" style="background-color: #66cdf2; color: #000">Pipeline Count</th></tr><tr></tr>
+              <span
+                class=" d-none d-sm-block d-md-block d-lg-block d-xl-block"
+              >
+                    Productions
+                  </span>
+              <span class=" d-block d-sm-none">
+                    <i class=" tim-icons icon-gift-2"> </i>
+                  </span>
+            </label>
+            <label class=" btn btn-sm btn-danger btn-simple" (click)="data=datasets[2];updateOptions();clicked=false;clicked1=false;clicked2=true" [ngClass]="{'active':clicked2===true}">
+              <input class=" d-none" name="options" type="radio" />
 
-  </thead>
-  <tbody><tr><td>Closed Lost</td><td>156</td></tr></tbody>
-</table>
+              <span
+                class=" d-none d-sm-block d-md-block d-lg-block d-xl-block"
+              >
+                    Sessions
+                  </span>
+              <span class=" d-block d-sm-none">
+                    <i class=" tim-icons icon-tap-02"> </i>
+                  </span>
+            </label>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class=" card-body">
+      <div class=" chart-area"><canvas id="chartBig1"> </canvas></div>
+    </div>
+  </div>
+</div>
